# repo-3376-quickwit

./: docker-compose.yml
.github/workflows/: publish_docker_images.yml
quickwit/: Cargo.toml  deny.toml
quickwit/quickwit-cli/: Cargo.toml
quickwit/quickwit-cli/src/: cli.rs  index.rs  lib.rs  main.rs  source.rs  split.rs
quickwit/quickwit-cli/tests/: helpers.rs
quickwit/quickwit-common/src/: checklist.rs  lib.rs
quickwit/quickwit-config/src/: lib.rs
quickwit/quickwit-config/src/index_config/: mod.rs
quickwit/quickwit-config/src/source_config/: mod.rs
quickwit/quickwit-core/src/: index.rs
quickwit/quickwit-doc-mapper/src/: doc_mapper.rs  fast_field_reader.rs  query_builder.rs
quickwit/quickwit-doc-mapper/src/default_doc_mapper/: default_mapper.rs
quickwit/quickwit-grpc-clients/: Cargo.toml
quickwit/quickwit-grpc-clients/src/: balance_channel.rs  lib.rs  service_discovery.rs
quickwit/quickwit-indexing/: Cargo.toml
quickwit/quickwit-indexing/src/: test_utils.rs
quickwit/quickwit-indexing/src/actors/: doc_processor.rs  indexer.rs  indexing_pipeline.rs  merge_executor.rs
quickwit/quickwit-indexing/src/models/: indexed_split.rs
quickwit/quickwit-integration/: Cargo.toml  README.md
quickwit/quickwit-jaeger/src/: lib.rs
quickwit/quickwit-metastore/src/: split_metadata.rs
quickwit/quickwit-rest-client/src/: error.rs  models.rs  rest_client.rs
quickwit/quickwit-search/src/: client.rs  cluster_client.rs  collector.rs  fetch_docs.rs  leaf.rs  lib.rs  root.rs  search_response_rest.rs  service.rs  tests.rs
quickwit/scripts/: dep-tree.py
(+12 files in other folders)
