[package]
name = "quickwit-integration"
version = "0.4.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later"                           # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's integration tests"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

quickwit-common = { workspace = true }
quickwit-config = { workspace = true }
quickwit-metastore = { workspace = true }
quickwit-search = { workspace = true }
quickwit-serve = { workspace = true }
